2008-09-26  Sergey Poznyakoff  <gray@gnu.org.ua>

	* makeinfo/sectioning.c (get_sectioning_number): Use
	getdocumenttext to translate 'Appendix' heading.

2008-09-18  Karl Berry  <karl@tug.org>

	* Version 4.13.

2008-09-13  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/window.c (line_map_init): Take an additional argument,
	node.
	(window_compute_line_map): Recompute the line map if the node
	has changed.
	* info/window.h (struct line_map_struct): New member `node'.

2008-08-29  Karl Berry  <karl@gnu.org>

	* doc/info-stnd.texi: use @kbd for key sequences and @key only for
	names of keys, as intended.  Inspired by Eli, 28 Aug 2008 21:21:38.

2008-08-28  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (main): convert_from_stream (stdin)
	if an input filename is named "-".  Suggestion from
	Bruno Haible, 26 Aug 2008 01:05:28.

2008-08-27  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (EXECUTE_STRING_MAX): bump to 32k.
	Report from Patrice, 20 Aug 2008 14:28:30.
	A real fix is beyond me right now, and seems unnecessary
	for the future since we're moving to a different implementation.

2008-08-16  Karl Berry  <karl@tug.org>

	* pretest 4.12.94.

2008-08-15  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_thumbpdf): needs $in_dir on the filename.
	Report from: Christoph Spiel, 13 Aug 2008 08:27:16.

2008-08-15  Ben Pfaff  <blp@cs.stanford.edu>  (tiny change)

	* makeinfo/makeinfo.c (remember_brace_1): always xstrdup.
	Avoids seg fault on input of {x}@y, e.g., makeinfo texinfo.tex.
	Sent 14 Aug 2008 21:35:19.

2008-08-14  Karl Berry  <karl@gnu.org>

	* info/info.c (info_short_help): mention Info manuals and the h
	key within the program.

2008-08-10  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (absolute_filenames): preserve even non-directories
	in the returned path, in case they contain metacharacters
	meaningful to TeX, such as braces.
	Bug report from Werner Lemberg, 10 Aug 2008 08:26:58.

2008-07-27  Karl Berry  <karl@gnu.org>
